[package]
name = "local-ex"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Thread local async executor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.5"
waker-fn = "1.1"
futures-lite = "1.12"
