[package]
name = "yanet-attributes"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = {version = "1", features = ["alloc"] }
yanet-core = { path = "../yanet-core/" }
anyhow = { version = "1" }
event-listener = { version = "2.5.3" }
async-channel = { version = "1.8.0" }
async-broadcast = { version = "0.5.0" }
futures-lite = { version = "1.12.0" }
