[package]
name = "yanet-multiplex"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yanet-core = { path = "../yanet-core/" }
serde = { version = "1", features = ["derive"] }
postcard =  { version = "1", features = ["alloc"] }
async-channel = { version = "1" }
async-executor = { version = "1.5.0" }
anyhow = { version = "1", features = ["std", "backtrace"] }
futures-lite = { version = "1", default-features = false }
