[package]
name = "yanet-muxer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yanet-core = { path = "../yanet-core/" }
serde = { version = "1", features = ["derive"] }
postcard =  { version = "1", features = ["alloc"] }
async-channel = { version = "1" }
dashmap = { version = "5.4.0" }
futures-micro = { version = "1.0.0-rc0" }
