[package]
name = "yanet-noise"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yanet-core = { path = "../yanet-core/" }
snow = { version = "0.9.0" }
serde = { version="1", features=["derive"] }
postcard = { version = "1" }
async-channel = { version = "1.8" }
heapless = { version = "0.7.16" }
async-executor = { version = "1.5.0" }
futures-micro = { version = "1.0.0-rc0" }
dashmap = { version = "5.4.0" }
