[package]
name = "yanet-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yanet-core = { path = "../yanet-core" }
async-channel = { version = "1" }
anyhow = { version = "1" }
futures-lite = { version = "1.12.0" }
