[package]
name = "yanet-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yanet-core = { path = "../yanet-core/" }
futures-timer = { version = "3" }
async-channel = { version = "1.8.0" }
anyhow = { version = "1.0.68" }
