[package]
name = "yanet-udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1" }
postcard = { version = "1", features = ["alloc"] }
yanet-core = { path = "../yanet-core/" }
futures-timer = { version = "3" }
async-channel = { version = "1.8.0" }
anyhow = { version = "1.0.68" }
async-executor = { version = "1.5.0" }
